Fix the selector for the footer list items on narrower screens

--- a/style.css
+++ b/style.css
@@ -107,7 +107,7 @@
 		min-height: calc(100vh - 280px);
 	}
 
-	#menu-footer li {
+	.site-footer li {
 		display: block;
 		padding: 0 0 1em;
 		text-align: center;
